--- a/project_2/requirements.txt
+++ b/project_2/requirements.txt
@@ -1,11 +1,11 @@
-numpy
-opencv-python
+numpy==1.20.2
+opencv-python==4.5.1.48
 protobuf
-easydict
+easydict=1.9
 pytorch
-pillow
-matplotlib
+pillow=8.2.0
+matplotlib==3.4.1
 wxpython
 shapely
 tqdm
-open3d
+open3d==0.9.0.0
