project_1: add adam SGD with constant LR

--- a/project_1/training/reference/pipeline_new.config
+++ b/project_1/training/reference/pipeline_new.config
@@ -132,6 +132,31 @@ train_config {
   data_augmentation_options {
     random_horizontal_flip {
     }
+    random_rgb_to_gray {
+      probability: 0.2
+    }
+    random_adjust_brightness {
+    }
+    random_adjust_contrast {
+    }
+    random_adjust_hue {
+    }
+    random_adjust_saturation {
+    }
+    random_crop_image {
+    }
+    random_black_patches {
+    }
+    random_self_concat_image {
+    }
+    autoaugment_image {
+    }
+    adjust_gamma {
+      gamma: 1 #[default = 1.0]
+      gain: 2 #[default = 1.0]
+    }
+    random_resize_method {
+    }
   }
   data_augmentation_options {
     random_crop_image {
@@ -145,21 +170,18 @@ train_config {
   }
   sync_replicas: true
   optimizer {
-    momentum_optimizer {
+    adam_optimizer {
       learning_rate {
-        cosine_decay_learning_rate {
-          learning_rate_base: 0.04
-          total_steps: 2500
-          warmup_learning_rate: 0.013333
-          warmup_steps: 200
-        }
+        constant_learning_rate {
+          learning_rate: 0.01 #[default = 0.002]
+          }
       }
-      momentum_optimizer_value: 0.9
+      epsilon: 1e-8 #[default = 1e-8]
     }
     use_moving_average: false
   }
-  fine_tune_checkpoint: "./training/pretrained-models/ssd_resnet50_v1_fpn_640x640_coco17_tpu-8/checkpoint/ckpt-0"
-  num_steps: 2500
+  fine_tune_checkpoint: "/home/workspace/training/pretrained-models/ssd_resnet50_v1_fpn_640x640_coco17_tpu-8/checkpoint/ckpt-0"
+  num_steps: 15git00
   startup_delay_steps: 0.0
   replicas_to_aggregate: 8
   max_number_of_boxes: 100
